--- a/examples/sass/src/index.scss
+++ b/examples/sass/src/index.scss
@@ -1,5 +1,9 @@
 $margin: 5px;
+$background: #4c4c4c;
+$color: #f4f4f4;
 
 body {
   margin: $margin;
+  background: $background;
+  color: $color;
 }
